# running-route-video-generater

./: .dockerignore  .gitignore  COMMANDS.md  CONFIGURATION.md  Cargo.toml  Dockerfile  LIBRARY_USAGE.md  Makefile  PUBLISHING.md  QUICKSTART.md  README.md  SERVER.md  compose.yml  fly.toml  rustfmt.toml
.github/workflows/: commit-lint.yml  rust-ci.yml
examples/: custom_config.rs  custom_scaling.rs  generate_image.rs  generate_video.rs  image_config.rs  server.rs  video_config.rs
source/: car.fit  data.fit
src/: lib.rs  main.rs
src/configs/: config.rs  image_config.rs  mod.rs  video_config.rs
src/generators/: mod.rs  route_image.rs  route_video.rs  running_route_image.rs  running_route_video.rs
src/types/: drawer_data.rs  fit_data.rs  mod.rs  route_config.rs
src/utils/: converter.rs  creator.rs  element_drawer.rs  mod.rs  performance.rs  read_file.rs  running_route_video.rs
