[package]
name = "runarium"
version = "0.1.0"
edition = "2021"
authors = ["JFKongphop <kongphopleo@gmail.com>"]
description = "Generate animated videos from GPS running/cycling data with real-time statistics"
repository = "https://github.com/JFKongphop/runarium"
homepage = "https://github.com/JFKongphop/runarium"
documentation = "https://docs.rs/runarium"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["gps", "fitness", "video", "visualization", "running"]
categories = ["multimedia::video", "visualization", "command-line-utilities"]

[lib]
name = "runarium"
path = "src/lib.rs"

[[bin]]
name = "runarium"
path = "src/main.rs"

[[bin]]
name = "rvs"
path = "src/experiments/route_video_scratch.rs"

[dependencies]
anyhow = "1.0.99"
fitparser = "0.10.0"
image = "0.25.6"
imageproc = "0.25.0"
opencv = "0.97.2"
reqwest = { version = "0.12", features = ["blocking"] }
divan = "0.1.21"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
axum = { version = "0.7", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4"] }

